# soundsieve-worker

./: README.md  copy-to-remote.sh  db.py  ec2-connect.sh  main.py  pyproject.toml  remote-setup.sh  requirements.txt
.devcontainer/: devcontainer.json
