[build-system]
requires = ["poetry==0.12.16"]

[tool.poetry]
name = "soundsieve_worker"
version = "0.0.1"
description = "Soundsieve source separation with AWS EB Python worker based on Flask"
authors = ["Erin Akarice <erinakarice@gmail.com>", "Nico de Vos <njdevos@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"
boto3 = "*"
Flask = "*"

[tool.poetry.dev-dependencies]
awscli = "^1.16"
pytest = "*"
